# music-elf

./: .gitignore  README.md  pyproject.toml
scripts/: earcheck_midi.py  estimate_latent_stats.py  eyeball_midi.py  generate_sample_midis.py  launch.sh  prepare_midi.py
src/elf/: __init__.py  cli.py  eval.py  eval_ppl.py  generation.py  train.py  train_step.py
src/elf/configs/: config.py
src/elf/configs/training_configs/: smoke_music.yml  train_de-en_ELF-B.yml  train_music_ELF-B.yml  train_owt_ELF-B.yml  train_owt_ELF-L.yml  train_owt_ELF-M.yml  train_xsum_ELF-B.yml
src/elf/modules/: model.py  music_encoder.py  t5_encoder.py
src/elf/utils/: checkpoint_utils.py  data_utils.py  generation_utils.py  logging_utils.py  metrics_utils.py  muon_utils.py  music_tokenizer.py  train_utils.py
src/music_elf/: __init__.py  cli.py  dataset.py  midi.py  tokenizer.py
tests/: test_cli.py  test_dataset.py  test_midi.py
