[project]
name = "elf"
version = "0.1.0"
description = "Command-line interface for ELF training and inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
elf = "elf.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
